<resources>
    <string name="app_name">eTask</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="notes">Notes</string>
    <string name="Title">Title</string>
    <string name="Time_format">00:00 am/pm</string>
    <string name="Date_format">dd/mm/yy</string>
    <string name="Add_description">Add Description</string>
    <string name="save_button">Save</string>
    <string name="clear_button">Clear All</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="assigned">Assigned</string>
    <string name="priority">Priority</string>
    <string name="date_format">dd/mm/yy</string>
    <string name="time_format">00:00 hrs</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
</resources>