<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    app:contentPadding="5dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp"
    app:cardBackgroundColor="@color/colorPrimarylight"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/row_title"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:text="@string/Title"
            />
        <TextView
            android:id="@+id/view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/Black"
            android:layout_toRightOf="@id/row_title"
            />


        <TextView
            android:id="@+id/row_start_date"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:layout_below="@id/row_title"

            />
        <TextView
            android:id="@+id/view_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/Black"
            android:layout_toRightOf="@id/row_start_date"
            android:layout_below="@id/view_title"

            />


        <TextView
            android:id="@+id/row_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:layout_below="@+id/row_title"
            android:layout_toRightOf="@+id/view_start_date"
            android:layout_marginLeft="62dp"
            />
        <TextView
            android:id="@+id/view_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/Black"
            android:layout_below="@id/view_title"
            android:layout_toRightOf="@id/row_end_date"
            android:paddingLeft="7dp"/>



        <TextView
            android:id="@+id/row_start_time"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:layout_below="@id/row_start_date"/>
        <TextView
            android:id="@+id/view_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/Black"
            android:layout_below="@id/view_start_date"
            android:layout_toRightOf="@id/row_start_time"/>


        <TextView
            android:id="@+id/row_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:layout_below="@+id/row_end_date"
            android:layout_toRightOf="@id/view_start_time"
            android:layout_marginLeft="60dp"

            />
        <TextView
            android:id="@+id/view_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:layout_below="@id/view_end_date"
            android:layout_toRightOf="@id/row_end_time"
            android:paddingLeft="5dp"/>


        <TextView
            android:id="@+id/row_assigned_to"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:text="@string/assigned"
            android:layout_below="@+id/row_start_time"/>
        <TextView
            android:id="@+id/view_assigned_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/Black"
            android:layout_below="@+id/view_start_time"
            android:layout_toRightOf="@id/row_assigned_to"/>

        <TextView
            android:id="@+id/row_priority"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:text="@string/priority"
            android:layout_below="@id/row_assigned_to"/>
        <TextView
            android:id="@+id/view_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/Black"
            android:layout_below="@id/view_assigned_to"
            android:layout_toRightOf="@id/row_priority"/>

    </RelativeLayout>


</androidx.cardview.widget.CardView>





