<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustPan"
    tools:context=".AddTask">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title"
                android:background="@color/lightshade"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Title" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/start_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/title_layout"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/start_date_layout"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/start_date"
                    android:background="@color/lightshade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Date_format"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/start_time_layout"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/start_time"
                    android:background="@color/lightshade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Time_format"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/end_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/start_date_time"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/end_date_layout"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/end_date"
                    android:background="@color/lightshade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Date_format"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/end_time_layout"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/end_time"
                    android:background="@color/lightshade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Time_format"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/Assigned_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/end_date_time" />


        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/Priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/Assigned_to" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/multiline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:hint="@string/Add_description"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:textColor="@color/Black"
            android:textColorHint="@color/Black"
            app:layout_constraintTop_toBottomOf="@id/Priority"
            android:gravity="center" />


        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/multiline"
            >

            <Button
                android:id="@+id/save"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/save_button"
                android:textColor="@color/Black"
                />

            <Button
                android:id="@+id/reset"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/clear_button"
                android:textColor="@color/Black"
                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
