<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/my_progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:indeterminate="true"
        android:visibility="invisible"/>

<RelativeLayout
    android:layout_marginTop="100dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    >



    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />



    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/logo"
        android:id="@+id/textField1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_or_phone"
        app:boxStrokeColor="@color/colorAccent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginLeft="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


   <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textField2"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textField1"
        android:hint="@string/Password"
        app:boxStrokeColor="@color/colorAccent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_button"
        android:layout_below="@id/ed_password"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="-50dp"
        android:text="Remember me?"
        android:checked="true"
        tools:ignore="NotSibling" />

    <Button
        android:layout_marginTop="80dp"
        android:layout_below="@+id/textField2"
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:shadowColor="@color/Grey"
        android:background="@color/someblue"
        android:text="@string/login" />




</RelativeLayout>
</LinearLayout>